# wryte

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
