[package]
name = "wryte"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wryte"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
